fix mobile overflow

--- a/src/pages/channels/curiosity-cards/index.css
+++ b/src/pages/channels/curiosity-cards/index.css
@@ -1,15 +1,3 @@
-/* html, body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: bold;
-  font-stretch: condensed;
-  transform: scaleX(0.85);
-  transform-origin: center;
-  text-align: center;
-  line-height: 1;
-} */
-
 div#curiosity-cards {
   height: 100vh;
   padding: 0;
@@ -68,6 +56,8 @@ div#curiosity-cards {
   }
   
   @media (max-width: 480px) {
+    height: 95dvh;
+
     .category-container {
       gap: 8px;
     }
